# selenium-test

./: README.md  pyproject.toml
selenium_test/: buyme.py  google.py
