[tool.poetry]
name = "selenium-test-1"
version = "0.1.0"
description = ""
authors = ["NabeelSaabna <nabeel.saabna@whitesourcesoftware.com>"]
readme = "README.md"
packages = [{include = "selenium_test_1"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
